# SQR_FP

./: .coverage  README.md  mock.txt  pyproject.toml  sonar-project.properties
.github/workflows/: main.yaml
SQR/: README.md  api.py  app.css  app.html  client.js  messages.db  prompt.txt  pyproject.toml
app/: api.py  app.css  app.html  client.js  messages.db  prompt.txt
tests/: test_app.py  test_performance  test_performance.py  todelete.py  ui_tests.py
