[tool.poetry]
name = "sqr"
version = "0.1.0"
description = ""
authors = ["arinazaza <a.zavelevich@innopolis.university>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.2"
requests = "^2.31.0"
pytest = "^8.2.0"
flake8 = "^7.0.0"
uvicorn = "^0.29.0"
asyncio = "^3.4.3"
pytest-asyncio = "^0.23.6"
httpx = "^0.27.0"
pytest-cov = "^5.0.0"
bandit = "^1.7.8"
selenium = "^4.20.0"
webdriver-manager = "^4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
