[tool.poetry]
name = "sqr"
version = "0.1.0"
description = ""
authors = ["Rostislav Kulik <45662763+r-kulik@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.2"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
